--- a/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
+++ b/onlinecourse/templates/onlinecourse/exam_result_bootstrap.html
@@ -6,7 +6,6 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
-
  <nav class="navbar navbar-light bg-light">
     <div class="container-fluid">
         <div class="navbar-header">
@@ -36,20 +35,49 @@
 </nav>
 
 <div class="container-fluid">
-    {% if grade > 80 %}
+     <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
+
+        <div class="card-body mt-1">
+            <h2>{{user.first_name}}</h2>
+            {% if status %}
     <div class="alert alert-success">
        <!--HINT Display passed info -->
+      <h4>Congratulations {{user.username}}! You have passed the exam and completed the course with score {{total_score}}/{{total_marks}}</h4>
+     
     </div>
         {% else %}
-        <div class="alert alert-danger">
+     <div class="alert alert-danger">
             <!--HINT Display failed info -->
-        </div>
-        <a class="btn btn-link text-danger" href="{% url 'onlinecourse:course_details' course.id %}">Re-test</a>
-        {% endif %}
-        <div class="card-columns-vertical mt-1">
-        <h5 class="">Exam results</h5>
-            <!--HINT Display exam results-->
-        </div>
+            <h4>Sorry {{user.username}}! You have failed the exam with score {{total_score}}/{{total_marks}}</h4>
     </div>
+    {%endif%}
+        <h4>Exam results</h4>
+        <!--HINT Display exam results-->
+            {% for q in questions %}
+            <dl>
+                <dt>{{q.question_text}}</dt>
+                <dd>
+                    <ul>
+                    {%for c in q.choice_set.all%}
+                        {% if c.id in submitted_answers%}
+                            {%if c.is_correct%}
+                            <div class="alert alert-success"><li>Correct answer: {{c.choice_text}}</li></div>
+                            {%else%}
+                            <div class="alert alert-danger"><li>Wrong answer: {{c.choice_text}}</li></div>
+                            {%endif%}
+                        {%else%}
+                            {%if c.is_correct%}
+                            <div class="alert alert-danger" style="background-color: yellow;"><li>Not Selected: {{c.choice_text}}</li></div>
+                            {%else%}
+                            <li>{{c.choice_text}}</li>
+                            {%endif%}
+                        {%endif%}
+                    {%endfor%}
+                     </ul>
+                </dd>
+            </dl>
+           {% endfor%}
+        </div>
+</div>
 </body>
 </html>
